echo-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    konghq.com/plugins: rl-by-ip
  labels:
    app: echo
  name: echo
  namespace: echo
spec:
  externalName: example.com
  ports:
  - port: 8080
    name: high
    protocol: TCP
    targetPort: 8080
  - port: 80
    name: low
    protocol: TCP
    targetPort: 8080
  selector:
    app: echo
